--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,6 @@ deploy_prod:
     - echo "Building the website."
     - hugo
     - echo "Deploying the website."
+    - rm -rf /usr/share/nginx/resume.danmanners.com/*
     - mv `pwd`/public/* /usr/share/nginx/resume.danmanners.com/
-    - chmod -R +x /usr/share/nginx/danmanners.com
-    - chown -R gitlab-runner /usr/share/nginx/resume.danmanners.com
+    - chmod -R +x /usr/share/nginx/resume.danmanners.com
