--- a/themes/hugo-orbit-theme/theme.toml
+++ b/themes/hugo-orbit-theme/theme.toml
@@ -1,3 +1,4 @@
+# Main Bits
 name = "Orbit"
 license = "MIT"
 licenselink = "//github.com/aerohub/hugo-orbit-theme/blob/master/LICENSE.md"
@@ -7,6 +8,7 @@ tags = ["cv", "resume", "colour schemes"]
 features = ["responsive", "colour schemes"]
 min_version = 0.16
 
+# Original Author of the Theme
 [author]
   name = "Pavel Kanyshev"
   homepage = "//github.com/aerohub"
@@ -16,3 +18,7 @@ min_version = 0.16
   name = "Xiaoying Riley"
   homepage = "//github.com/xriley"
   repo = "//github.com/xriley/Orbit-Theme"
+
+# After Hugo 0.60, this is necessary to use HTML in markup documents.
+[markup.goldmark.renderer]
+unsafe = true
