--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,32 @@
 # Cross compile the website docker container and push to Docker Hub
-name: Cross Compile resume-danmanners-dot-com
+name: Build Hugo Site and Push to S3
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
         uses: actions/checkout@v2
 
-      # This is required in order to build ARM images
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      # This is required in order to cross-compile ARM images
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      # Makes sure to log into Dockerhub
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          hugo-version: "0.91.2"
 
-      # Should be the equivilant of this command
-      # docker buildx build --no-cache --push \
-      #   --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6,linux/arm/v8 \
-      #   -t danielmanners/danmanners-dot-com .
-      - name: Build and push
-        uses: docker/build-push-action@v2
+      - name: Build
+        run: hugo --minify
+
+      - uses: jakejarvis/s3-sync-action@master
         with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          file: ./dockerfile
-          push: true
-          no-cache: true
-          tags: |
-            danielmanners/resume-dot-danmanners-dot-com:latest
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
+          SOURCE_DIR: 'public'      # optional: defaults to entire repository
